cloudformation.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: CloudFormation template to create an EC2 instance with WireGuard installed and preconfigured

Parameters:
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances - see https://checkip.amazonaws.com/
    Type: String
    MinLength: 10
    MaxLength: 18
    Default: 0.0.0.0/32
    AllowedPattern: "(\\d{1,3}\\.){3}\\d{1,3}/32"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/32
  KeyName:
    Description: The name of the SSH key pair to allow access to the EC2 instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be the name of an existing EC2 KeyPair

Mappings:
  ImageByRegion:
    eu-central-1:  # Frankfurt
      ImageId: ami-000b4fe7b39432646
    ap-northeast-3:  # Osaka
      ImageId: ami-068f4a4d19bc7b838
    us-east-1:  # Virginia
      ImageId: ami-0ab515046786de9dc

Resources:
  WireguardServer:
    Type: "AWS::EC2::Instance"
    Properties: 
      InstanceType: t4g.nano
      ImageId: !FindInMap [ImageByRegion, !Ref AWS::Region, ImageId]
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 8
      PropagateTagsToVolumeOnCreation: true
      SecurityGroups:
        - !Ref WireguardSecurityGroup
      KeyName: !Ref KeyName
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -ex
          apt-get update -y
          apt-get upgrade -y
          apt-get install -y wireguard qrencode zip

          # Configure WireGuard
          curl -s https://raw.githubusercontent.com/lstarrett/aws-wg-vpn/refs/heads/main/configure_and_start_wireguard.sh | bash

          # Restart server
          reboot
      Tags:
        - Key: Name
          Value: WireguardServer

  WireguardSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties: 
      GroupDescription: Enable SSH access via port 22 from the specified IP address and WireGuard access via port 51820
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: !Ref SSHLocation
        - IpProtocol: udp
          FromPort: "51820"
          ToPort: "51820"
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: WireguardSecurityGroup

Outputs:
  PublicIP:
    Description: The Public IP address of the EC2 instance
    Value: !GetAtt WireguardServer.PublicIp
